fix header -> phone link alignment on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,6 +60,10 @@ body {
 
             @media #{$mobiles} {
                 flex-direction: column;
+                
+                .phone {
+                    text-align: center;
+                }
             }
 
             .title {
